<resources>
    <string name="app_name">AndroidResId</string>
    <string name="app_description">the most significant resources for Android developers</string>
    <string name="project_description">AndroidResId.com - the most significant resources for Android developers</string>
    <string name="nav_drawer_open">Drawer open</string>
    <string name="nav_drawer_close">Drawer close</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="telegram_channel">Telegram channel</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="web">Web</string>
    <string name="twitter">Twitter</string>
    <string name="image_content_description">image</string>
    <string name="catalog">Catalog of resources</string>
</resources>
